# data-quality-scanner

./: .gitignore  AI Readiness Toolkit-AtScale Updated.docx  CLAUDE.md  DQS_Checks_Reference.xlsx  DQS_Overview.md  DQS_PII_Screener_Reference.xlsx  DQS_Weights_Explainer.xlsx  Data_Quality_Scanner_Spec_v2.xlsx  Dockerfile  PII_SCREENER.md  README.md  column_semantics_result.html  column_semantics_result.json  column_semantics_test.py  dqs_dirty_report.html  dqs_report.html  generate_checks_excel.py  generate_report.py  generate_screener_excel.py  generate_weights_doc.py  pyproject.toml  scratch.py  tpcds_dirty_full_report.html  tpcds_dirty_full_result.json  tpcds_full_report.html  tpcds_full_result.json  tpcds_full_scan.yaml  tpcds_questionnaire.yaml  tpcds_questionnaire_form.html  tpcds_result.json  tpcds_screened_result.json  tpcds_wizard_report.html  tpcds_wizard_result.json  tpcds_wizard_scan.yaml  viz.py  wizard_connector.yaml
backend/: main.py  requirements.txt  scratch.py  test_endpoint.py
backend/reports/: 107bd0f1-5306-48a4-9024-76d03ee39f6d_report.html  107bd0f1-5306-48a4-9024-76d03ee39f6d_result.json  31dea689-4e11-4cae-ad22-105ce4fa66b5_report.html  31dea689-4e11-4cae-ad22-105ce4fa66b5_result.json  6b8ed406-8ef8-4a4c-a0ce-21c6e223339e_report.html  (+13 more)
config/: example_scan.yaml
docs/: adf_pipeline_runs_table.md
dqs/: __init__.py  cli.py  reporter.py  scanner.py  scorer.py
dqs/checks/: __init__.py  accuracy.py  (+13 more)
frontend/: index.html
test/: info_schema.py  test_synapse_connector.py  tpc_ds_test.py  tpcds_dirty_full_scan.yaml  tpcds_dirty_result.json
(+28 files in other folders)
